# readmd

./: AGENTS.md  Cargo.toml  README.md
demos/source/: deep-research-ai-techniques.md
demos/theme-style/: graphite-editorial.html  graphite-large.html  graphite-notebook.html  graphite-technical.html  index.html  midnight-editorial.html  midnight-large.html  midnight-notebook.html  midnight-technical.html  paper-editorial.html  paper-large.html  paper-notebook.html  paper-technical.html  polar-editorial.html  polar-large.html  polar-notebook.html  polar-technical.html  sepia-editorial.html  sepia-large.html  sepia-notebook.html  sepia-technical.html  white-editorial.html  white-large.html  white-notebook.html  white-technical.html
docs/: PLAN.md  SPEC.md
examples/: readmd.toml
scripts/: regenerate-demos.sh
skills/readmd/: SKILL.md
src/: cli.rs  config.rs  document.rs  error.rs  lib.rs  main.rs  renderer.rs  theme.rs
tests/: cli.rs
