[package]
name = "readmd"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
dirs = "6"
html-escape = "0.2"
open = "5"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
